--- a/source/_posts/浏览器-浏览器渲染原理.md
+++ b/source/_posts/浏览器-浏览器渲染原理.md
@@ -40,15 +40,16 @@ tags: 浏览器
 ### 渲染过程
 
 1. 渲染流程
-   ![](https://img-blog.csdnimg.cn/bf47c001ed9244e8802ce945760ce85b.png)
-   渲染流程的主要四个步骤
-   1.1 解析 HTML 生成 DOM 树
-   1.2 解析 css 生成 CSSOM 树
-   1.3 根据 DOM 和 CSSOM 树构建 Render 树
-   1.4 布局 render 树
-   1.5 绘制 render 树
 
-2. 渲染细节
+![](/images/render.png)
+渲染流程的主要四个步骤
+1.1 解析 HTML 生成 DOM 树
+1.2 解析 css 生成 CSSOM 树
+1.3 根据 DOM 和 CSSOM 树构建 Render 树
+1.4 布局 render 树
+1.5 绘制 render 树
+
+1. 渲染细节
    2.1 生成 DOM 树
    DOM 树的构建过程是一个深度遍历过程，当前节点的所有子节点都构建好后才会去构建当前节点的下一个兄弟节点。DOM 树的节点就时 document 对象
    DOM 树的生成过程中可能被 css 和 js 的加载执行阻塞
@@ -62,6 +63,6 @@ tags: 浏览器
    渲染引擎会遍历 render 树，并且调用 render 的 paint（）方法进行绘制
    这样一个完整的页面就渲染出来了
 
-3. 重排(回流)与重绘
+2. 重排(回流)与重绘
    3.1 在样式的尺寸发生改变的时候就会引起浏览器的重排（回流）机制进行重新计算渲染
    3.2 在颜色等不涉及尺寸的改变时会引起浏览器的重绘机制重新绘制页面
