--- a/source/_posts/微前端-基座搭建.md
+++ b/source/_posts/微前端-基座搭建.md
@@ -1,8 +1,8 @@
 ---
 title: 微前端-基座搭建
 date: 2023-04-23 19:30:00
-categories: 基座搭建
-tags: 微前端
+categories: 微前端
+tags: 项目搭建
 ---
 
 ### 微前端是现在企业级应用无法避免的一个问题
